# gco-llm-pkm

./: .dockerignore  .env.example  .env.local.example  .gitignore  AUTH_SETUP.md  CLAUDE.md  CLI_AUTH_GUIDE.md  DEPLOY.sh  DEPLOYMENT.md  Dockerfile  FRONTEND_DEVELOPMENT.md  GETTING_STARTED.md  GOOGLE_CALENDAR_SETUP.md  ORG-QL-QUERIES.md  PROJECT.md  README.md  RUNME-dev.sh  TODO-garyo.md  TODO.md  UPDATE-PROD.sh  docker-compose.override.yml.example  docker-compose.yml  docker-entrypoint.sh  generate-auth-config.py  generate-secrets.py  migrate_add_cost_tracking.py  migrate_user_context.py  pkm-bridge-server.py  pkm-cli.py  postgres-init.sql  pyproject.toml  requirements.txt  setup.sh  test-find-context.py  test-ticktick.py  test-timed-reminder.py  test-tool.py  test_db.py  test_rag.py
config/: README.md  examples.json  settings.py  system_prompt.txt  system_prompt_mcp.txt  user_context.txt.example
doc/: PROMPT_CACHING.md  SHELL_SECURITY_CHANGES.md  embedding.md
frontend/: .gitignore  README.md  astro.config.mjs  bun.lockb  package.json  tsconfig.json
frontend-editor/: index.html  package.json  tsconfig.json  vite.config.ts
mcp_server/: __init__.py  auth.py  resources.py  server.py  tools.py
pkm_bridge/: auth.py  context_retriever.py  database.py  db_repository.py  events.py  feedback_capture.py  file_editor.py  google_calendar_client.py  google_gmail_client.py  google_oauth.py  history_manager.py  llm.py  logging_config.py  models.py  org_links.py  query_enhancer.py  retrospective.py  stt_client.py  ticktick_client.py  ticktick_oauth.py  voice_preprocessor.py
(+95 files in other folders)
